src/objects/BatchNumber__c.object
<CustomObject>
    <description>This object stores the due dates, subject, related country and ID of a batch</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>ID of the related ISO Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_date__c</fullName>
        <description>Due date for batch</description>
        <label>Deadline date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enqueue_batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to launch a batch proceess</description>
        <label>Enqueue batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject describing the aim of the batch</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BatchNumber</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BatchNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>